# agentmed

./: .gitignore  LICENSE  Makefile  README.md  app.py  consensus_engine.py  eval_config.json  pyproject.toml
scripts/: clean_ledger.py  format_labels.py  verify_compression.py
src/: compare_architectures.py  evaluate_metrics.py  pipeline.py
src/multimodal_bench/: __init__.py  batch_openai.py  grader.py  pipeline.py
